fixed ide button group spacing issue on ff

--- a/app/stylesheets/ide.sass
+++ b/app/stylesheets/ide.sass
@@ -104,7 +104,7 @@ button.save
     .button_group
       display: block
       margin: auto
-      width: 180px
+      width: 185px
 
       button
         font-size: 80%
